tests/fixtures/invalid/divmod_set_bytes.py
# Cannot call divmod() with Set[int], Bytes
x = divmod({1, 2, 3}, b"hello")
